syntax="proto3";
option java_multiple_files = true;
package networking.order;

import "Proto/User.proto";

message OrderMessage {
  int32 id = 1;
  string comment = 2;
  string date = 3;
  double total = 5;
  repeated OrderItemMessage items = 6;
  int32 customerId = 7;
}

message OrderListMessage {
  repeated OrderMessage orders = 1;
}

message OrderItemMessage {
  int32 id = 1;
  string description = 2;
  string name = 3;
  string picture = 4;
  double price = 5;
  int32 quantity = 6;
  string voucher = 7;
  int32 providerId = 8;
}

service OrderService {
  rpc createOrder (OrderMessage) returns (OrderMessage);
  rpc getAllCustomerOrders (user.UserMessage) returns (OrderListMessage);
  rpc getOrderById (OrderMessage) returns (OrderMessage);
}